# simple-calculator-cpp

./: .gitignore  CMakeLists.txt  README.md  README.md.txt  main.cpp
include/: calculator.h
src/: calculator.cpp
tests/: test_calculator.cpp
